--- a/index.html
+++ b/index.html
@@ -11,18 +11,32 @@
 			<header>
 				<h1>Tic Tac Toe</h1>
 			</header>
-			<ul id="board">
-				<li id="spot1">+</li>
-				<li id="spot2">+</li>
-				<li id="spot3">+</li>
-				<li id="spot4">+</li>
-				<li id="spot5">+</li>
-				<li id="spot6">+</li>
-				<li id="spot7">+</li>
-				<li id="spot8">+</li>
-				<li id="spot9">+</li>
+
+			<h2>Game rules</h2>
+			<ul id="rules">
+				<li>O starts first, followed by X</li>
+				<li>Player can choose between O and X</li>
+				<li>Form a row down, across, or diagonally to win</li>
 			</ul>
-			<div class="clearfix"></div>
+
+			<table id="board">
+				<tr>
+					<td id="spot1"></td>
+					<td id="spot2"></td>
+					<td id="spot3"></td>
+				</tr>
+				<tr>
+					<td id="spot4"></td>
+					<td id="spot5"></td>
+					<td id="spot6"></td>
+				</tr>
+				<tr>
+					<td id="spot7"></td>
+					<td id="spot8"></td>
+					<td id="spot9"></td>
+				</tr>
+			</table>
+
 			<footer>
 				<button id="reset">Reset Game</button>
 			</footer>
